# Miyu

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.en.md  README.md  build.rs
.github/workflows/: linux.yml  windows.yml
knowledge-base/2. Arch Linux安装与配置相关/: 如何安装greetd加tuigreet.md
knowledge-base/3. 日用Arch Linux的常见问题/: Arch Linux 怎么避免滚挂.md  Niri怎么配置屏幕分享，屏幕分享用不了怎么办.md  系统字体不对怎么办.md
knowledge-base/5 shorin-arch-setup相关/: pac、pacr等命令如何安装.md
scripts/: package-arch.sh
src/: alarm.rs  cli.rs  config.rs  config_tui.rs  main.rs  paths.rs  perf_trace.rs  prompts.rs  token_estimate.rs
src/agent/: compaction.rs  event.rs  message_context.rs  mod.rs  recovery.rs  subagent_completion.rs  system_prompt.rs  tool_history.rs  tool_visibility.rs  turn_orchestration.rs
src/cli/: alarm_worker.rs  args.rs  background_commands.rs  chat.rs  config_commands.rs  fuzzy_select.rs  history.rs  init.rs  kb_commands.rs  localization.rs  memory_commands.rs  model_select.rs  permission_prompt.rs  providers.rs  repl.rs  repl_background.rs  repl_chrome.rs  repl_commands.rs  repl_editor.rs  repl_input.rs  repl_input_render.rs  repl_input_tests.rs  repl_shell.rs  repl_text.rs  reset.rs  sessions.rs  skills_commands.rs
src/clipboard/: args.rs  mod.rs  payload.rs  prompt.rs  reader.rs
src/config/: agents.rs  app.rs  defaults.rs  model.rs  model_metadata.rs  model_units.rs  paths.rs  permission.rs  provider.rs  secrets.rs  tests.rs
src/config_tui/: agents.rs  custom_prompts.rs  form.rs  gateways.rs  input.rs  model_metadata_form.rs  plugin_fields.rs  plugins.rs  provider_fetch.rs  provider_forms.rs  providers.rs  session.rs  settings.rs  ui.rs
src/control_commands/: catalog.rs  compaction.rs  compaction_args.rs  (+6 more)
web/: index.html  package-lock.json  package.json
(+9233 files in other folders)
